# hackFS-nifti

./: hardhat.config.js  package-lock.json  package.json
app/backend/aqua/: test.aqua  test.sayIt.air  timestamp.aqua  ts_getter.aqua
app/backend/cm/: app.js  package-lock.json  package.json
app/backend/cm/data/: data.json
app/backend/cm/schemas/: main.json  records.json
app/ceramic/schema/: db.json  geoDataAgg.json
app/fluence-nifti-service/: .repl_history  Cargo.toml  Config.toml
app/fluence-nifti-service/air-scripts/: nifti.js
app/fluence-nifti-service/aqua-scripts/: nifti.aqua
app/fluence-nifti-service/config/: nifti_cfg.json
app/fluence-nifti-service/scripts/: build.sh
app/fluence-nifti-service/src/: main.rs
app/frontend/: package-lock.json  package.json
app/frontend/public/: index.html
app/frontend/src/: App.css  App.js  index.js
app/frontend/src/components/body/: body.js  styles.css
app/frontend/src/components/button/: button.js  buttonDismissable.js  styles.css
app/frontend/src/components/footer/: index.js
app/frontend/src/components/header/: index.js  styles.css
app/frontend/src/components/loading/: loadinginit.js  styles.css
app/frontend/src/components/notifications/: notifications.js  styles.css
app/frontend/src/components/range/: range.js
app/frontend/src/contracts/: Factory.json  NFTFactory.json
app/frontend/src/data/: data.json
app/frontend/src/utils/: networks.json
contracts/: billboard.sol  nft.sol  nftFactory.sol
scripts/: deploy.js  mintNft.js
test/: test.js
(+7 files in other folders)
